--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -7,6 +7,6 @@
     <title>Product Review</title>
 </head>
 <body>
-Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices. #TODO: add more.
+Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
 </body>
 </html>
